--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,11 +30,21 @@ jobs:
       - run: |
           export IMAGE_NAME=labsoft-2018/$CIRCLE_PROJECT_REPONAME
           export TAG=${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/$IMAGE_NAME
-          docker build -t $IMAGE_NAME:CIRCLE_BUILD_NUM -t $IMAGE_NAME/latest .
+          docker build -t $IMAGE_NAME:$CIRCLE_BUILD_NUM -t $IMAGE_NAME:latest .
           docker tag $IMAGE_NAME:latest $TAG
           aws ecr create-repository --repository-name $IMAGE_NAME || echo "Repo already exists"
           $(aws ecr get-login --no-include-email)
           docker push $TAG
+
+  vsts-push:
+    docker:
+      - image: circleci/clojure:lein-2.7.1
+    working_directory: ~/repo
+    steps:
+      - add_ssh_keys
+      - checkout
+      - run: ssh-keyscan vs-ssh.visualstudio.com >> ~/.ssh/known_hosts
+      - run: git push ssh://2018-PCS2044-LAMBDA@vs-ssh.visualstudio.com:22/quack-pack/_ssh/accounts master
 
   deploy:
     <<: *defaults
@@ -52,6 +62,12 @@ workflows:
               only: master
           requires:
             - test
+      - vsts-push:
+          filters:
+            branches:
+              only: master
+          requires:
+            - build
       - promote:
           filters:
             branches:
